// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateSelect DateSelect date 1`] = `
<DateSelect
  cancelText="取消"
  defaultValue=""
  disabled={false}
  minuteStep={1}
  mode="date"
  okText="确定"
  onCancel={[Function]}
  onClick={[Function]}
  placeholder="请选择日期"
  prefixCls="za-select"
  title="选择日期"
  value="2017-09-06"
  valueMember="value"
>
  <div
    className="za-select-input"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="2017-09-06"
    />
    2017-09-06
    <DatePicker
      cancelText="取消"
      defaultValue=""
      disabled={false}
      locale={
        Object {
          "day": "日",
          "hour": "时",
          "minute": "分",
          "month": "月",
          "year": "年",
        }
      }
      minuteStep={1}
      mode="date"
      okText="确定"
      onCancel={[Function]}
      onClick={[Function]}
      onOk={[Function]}
      placeholder="请选择"
      prefixCls="za-picker"
      title="请选择"
      value="2017-09-06"
      valueMember="value"
      visible={false}
    >
      <div
        className="za-picker"
      >
        <div
          className="za-picker-container za-picker-hidden"
          onClick={[Function]}
        >
          <Popup
            animationDuration={200}
            autoClose={false}
            direction="bottom"
            mask={true}
            maskType="normal"
            onMaskClick={[Function]}
            prefixCls="za-popup"
            stayTime={3000}
            visible={false}
          >
            <div
              className="za-popup za-popup-hidden"
            >
              <div
                className="za-popup-wrapper za-popup-wrapper-bottom"
                style={
                  Object {
                    "WebkitTransitionDuration": "200ms",
                    "transitionDuration": "200ms",
                  }
                }
              >
                <div
                  className="za-picker-wrapper"
                >
                  <div
                    className="za-picker-header"
                  >
                    <div
                      className="za-picker-cancel"
                      onClick={[Function]}
                    >
                      取消
                    </div>
                    <div
                      className="za-picker-title"
                    >
                      请选择
                    </div>
                    <div
                      className="za-picker-submit"
                      onClick={[Function]}
                    >
                      确定
                    </div>
                  </div>
                  <div
                    className="za-picker-mask-top"
                  >
                    <div
                      className="za-picker-mask-bottom"
                    >
                      <DatePickerView
                        cancelText="取消"
                        defaultValue=""
                        disabled={false}
                        locale={
                          Object {
                            "day": "日",
                            "hour": "时",
                            "minute": "分",
                            "month": "月",
                            "year": "年",
                          }
                        }
                        minuteStep={1}
                        mode="date"
                        okText="确定"
                        onCancel={[Function]}
                        onClick={[Function]}
                        onOk={[Function]}
                        onValueChange={[Function]}
                        placeholder="请选择"
                        prefixCls="za-picker"
                        title="请选择"
                        value="2017-09-06"
                        valueMember="value"
                        visible={false}
                      />
                    </div>
                  </div>
                </div>
              </div>
              <Mask
                className="fade-leave"
                onClose={[Function]}
                prefixCls="za-mask"
                style={
                  Object {
                    "WebkitAnimationDuration": "200ms",
                    "animationDuration": "200ms",
                  }
                }
                type="normal"
                visible={false}
              />
            </div>
          </Popup>
        </div>
      </div>
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect datetime 1`] = `
<DateSelect
  cancelText="取消"
  defaultValue="2017-11-03 15:00"
  disabled={false}
  max="2017-11-12 14:00"
  min="2017-11-02 11:00"
  minuteStep={1}
  mode="datetime"
  okText="确定"
  onCancel={[Function]}
  onClick={[Function]}
  placeholder="请选择时间"
  prefixCls="za-select"
  title="选择时间"
  value=""
  valueMember="value"
>
  <div
    className="za-select-input"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="2017-11-03 15:00"
    />
    2017-11-03 15:00
    <DatePicker
      cancelText="取消"
      defaultValue="2017-11-03 15:00"
      disabled={false}
      locale={
        Object {
          "day": "日",
          "hour": "时",
          "minute": "分",
          "month": "月",
          "year": "年",
        }
      }
      max="2017-11-12 14:00"
      min="2017-11-02 11:00"
      minuteStep={1}
      mode="datetime"
      okText="确定"
      onCancel={[Function]}
      onClick={[Function]}
      onOk={[Function]}
      placeholder="请选择"
      prefixCls="za-picker"
      title="请选择"
      value=""
      valueMember="value"
      visible={false}
    >
      <div
        className="za-picker"
      >
        <div
          className="za-picker-container za-picker-hidden"
          onClick={[Function]}
        >
          <Popup
            animationDuration={200}
            autoClose={false}
            direction="bottom"
            mask={true}
            maskType="normal"
            onMaskClick={[Function]}
            prefixCls="za-popup"
            stayTime={3000}
            visible={false}
          >
            <div
              className="za-popup za-popup-hidden"
            >
              <div
                className="za-popup-wrapper za-popup-wrapper-bottom"
                style={
                  Object {
                    "WebkitTransitionDuration": "200ms",
                    "transitionDuration": "200ms",
                  }
                }
              >
                <div
                  className="za-picker-wrapper"
                >
                  <div
                    className="za-picker-header"
                  >
                    <div
                      className="za-picker-cancel"
                      onClick={[Function]}
                    >
                      取消
                    </div>
                    <div
                      className="za-picker-title"
                    >
                      请选择
                    </div>
                    <div
                      className="za-picker-submit"
                      onClick={[Function]}
                    >
                      确定
                    </div>
                  </div>
                  <div
                    className="za-picker-mask-top"
                  >
                    <div
                      className="za-picker-mask-bottom"
                    >
                      <DatePickerView
                        cancelText="取消"
                        defaultValue="2017-11-03 15:00"
                        disabled={false}
                        locale={
                          Object {
                            "day": "日",
                            "hour": "时",
                            "minute": "分",
                            "month": "月",
                            "year": "年",
                          }
                        }
                        max="2017-11-12 14:00"
                        min="2017-11-02 11:00"
                        minuteStep={1}
                        mode="datetime"
                        okText="确定"
                        onCancel={[Function]}
                        onClick={[Function]}
                        onOk={[Function]}
                        onValueChange={[Function]}
                        placeholder="请选择"
                        prefixCls="za-picker"
                        title="请选择"
                        value="2017-11-03 15:00"
                        valueMember="value"
                        visible={false}
                      />
                    </div>
                  </div>
                </div>
              </div>
              <Mask
                className=""
                onClose={[Function]}
                prefixCls="za-mask"
                style={
                  Object {
                    "WebkitAnimationDuration": "200ms",
                    "animationDuration": "200ms",
                  }
                }
                type="normal"
                visible={false}
              />
            </div>
          </Popup>
        </div>
      </div>
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect month 1`] = `
<div
  class="za-select-input za-select-placeholder"
>
  <input
    type="hidden"
    value=""
  />
  请选择年份
  <div
    class="za-picker"
  >
    <div
      class="za-picker-container za-picker-hidden"
    >
      <div
        class="za-popup za-popup-hidden"
      >
        <div
          class="za-popup-wrapper za-popup-wrapper-bottom"
          style="-webkit-transition-duration:200ms;transition-duration:200ms"
        >
          <div
            class="za-picker-wrapper"
          >
            <div
              class="za-picker-header"
            >
              <div
                class="za-picker-cancel"
              >
                取消
              </div>
              <div
                class="za-picker-title"
              >
                请选择
              </div>
              <div
                class="za-picker-submit"
              >
                确定
              </div>
            </div>
            <div
              class="za-picker-mask-top"
            >
              <div
                class="za-picker-mask-bottom"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateSelect DateSelect time 1`] = `
<DateSelect
  cancelText="取消"
  defaultValue="2017-11-03 15:00"
  disabled={false}
  minuteStep={15}
  mode="time"
  okText="确定"
  onCancel={[Function]}
  onClick={[Function]}
  placeholder="请选择时间"
  prefixCls="za-select"
  title="选择时间"
  value=""
  valueMember="value"
>
  <div
    className="za-select-input"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="15:00"
    />
    15:00
    <DatePicker
      cancelText="取消"
      defaultValue="2017-11-03 15:00"
      disabled={false}
      locale={
        Object {
          "day": "日",
          "hour": "时",
          "minute": "分",
          "month": "月",
          "year": "年",
        }
      }
      minuteStep={15}
      mode="time"
      okText="确定"
      onCancel={[Function]}
      onClick={[Function]}
      onOk={[Function]}
      placeholder="请选择"
      prefixCls="za-picker"
      title="请选择"
      value=""
      valueMember="value"
      visible={false}
    >
      <div
        className="za-picker"
      >
        <div
          className="za-picker-container za-picker-hidden"
          onClick={[Function]}
        >
          <Popup
            animationDuration={200}
            autoClose={false}
            direction="bottom"
            mask={true}
            maskType="normal"
            onMaskClick={[Function]}
            prefixCls="za-popup"
            stayTime={3000}
            visible={false}
          >
            <div
              className="za-popup za-popup-hidden"
            >
              <div
                className="za-popup-wrapper za-popup-wrapper-bottom"
                style={
                  Object {
                    "WebkitTransitionDuration": "200ms",
                    "transitionDuration": "200ms",
                  }
                }
              >
                <div
                  className="za-picker-wrapper"
                >
                  <div
                    className="za-picker-header"
                  >
                    <div
                      className="za-picker-cancel"
                      onClick={[Function]}
                    >
                      取消
                    </div>
                    <div
                      className="za-picker-title"
                    >
                      请选择
                    </div>
                    <div
                      className="za-picker-submit"
                      onClick={[Function]}
                    >
                      确定
                    </div>
                  </div>
                  <div
                    className="za-picker-mask-top"
                  >
                    <div
                      className="za-picker-mask-bottom"
                    >
                      <DatePickerView
                        cancelText="取消"
                        defaultValue="2017-11-03 15:00"
                        disabled={false}
                        locale={
                          Object {
                            "day": "日",
                            "hour": "时",
                            "minute": "分",
                            "month": "月",
                            "year": "年",
                          }
                        }
                        minuteStep={15}
                        mode="time"
                        okText="确定"
                        onCancel={[Function]}
                        onClick={[Function]}
                        onOk={[Function]}
                        onValueChange={[Function]}
                        placeholder="请选择"
                        prefixCls="za-picker"
                        title="请选择"
                        value="2017-11-03 15:00"
                        valueMember="value"
                        visible={false}
                      />
                    </div>
                  </div>
                </div>
              </div>
              <Mask
                className=""
                onClose={[Function]}
                prefixCls="za-mask"
                style={
                  Object {
                    "WebkitAnimationDuration": "200ms",
                    "animationDuration": "200ms",
                  }
                }
                type="normal"
                visible={false}
              />
            </div>
          </Popup>
        </div>
      </div>
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect year 1`] = `
<div
  class="za-select-input"
>
  <input
    type="hidden"
    value="2017年"
  />
  2017年
  <div
    class="za-picker"
  >
    <div
      class="za-picker-container za-picker-hidden"
    >
      <div
        class="za-popup za-popup-hidden"
      >
        <div
          class="za-popup-wrapper za-popup-wrapper-bottom"
          style="-webkit-transition-duration:200ms;transition-duration:200ms"
        >
          <div
            class="za-picker-wrapper"
          >
            <div
              class="za-picker-header"
            >
              <div
                class="za-picker-cancel"
              >
                取消
              </div>
              <div
                class="za-picker-title"
              >
                请选择
              </div>
              <div
                class="za-picker-submit"
              >
                确定
              </div>
            </div>
            <div
              class="za-picker-mask-top"
            >
              <div
                class="za-picker-mask-bottom"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
